--- a/fit4kids/app/Resources/views/course/index.html.twig
+++ b/fit4kids/app/Resources/views/course/index.html.twig
@@ -7,41 +7,42 @@
             </div>
             <div class="col-md-8">
                 <h3 style="margin-bottom:30px;">Lista Kursów: </h3>
-
-                <table class="table table-bordered">
-                    <thead>
-                    <tr>
-                        <th>Nazwa kursu</th>
-                        <th>Opis</th>
-                        <th>Cena</th>
-                        <th>Polubienia</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    {% for course in courses %}
+                <div class="mainTableDiv">
+                    <table class="table table-bordered">
+                        <thead>
                         <tr>
-                            <td>{{ course.title }}</td>
-                            <td>{{ course.description }}</td>
-                            <td>{{ course.price }}</td>
-
-                            <td>
-                                <span>{{ course.likes }}</span>
-                                <a href="/course/like" class="likeLink" data-id="{{course.id}}">
-                                    <img src="/Assets/images/heart.png" alt="polub" height="25" width="25">
-                                </a>
-                            </td>
-                            <td> 
-                                   {%if course.addedByLoggedUser == 'true'%}
-                                        <a class="btn btn-info disabled" href="#">Zakupiony</a>
-                                   {%endif%}
-                                   {%if course.addedByLoggedUser == 'false'%}
-                                        <a class="btn btn-default" href="addToBasket/{{ course.id }}">Dodaj do koszyka</a>
-                                   {%endif%}
-                            </td>
+                            <th>Nazwa kursu</th>
+                            <th>Opis</th>
+                            <th>Cena</th>
+                            <th>Polubienia</th>
                         </tr>
-                    {% endfor %}
-                    </tbody>
-                </table>
+                        </thead>
+                        <tbody>
+                        {% for course in courses %}
+                            <tr>
+                                <td>{{ course.title }}</td>
+                                <td>{{ course.description }}</td>
+                                <td>{{ course.price }}</td>
+
+                                <td>
+                                    <span>{{ course.likes }}</span>
+                                    <a href="/course/like" class="likeLink" data-id="{{course.id}}">
+                                        <img src="/Assets/images/heart.png" alt="polub" height="25" width="25">
+                                    </a>
+                                </td>
+                                <td> 
+                                       {%if course.addedByLoggedUser == 'true'%}
+                                            <a class="btn btn-info disabled" href="#">Zakupiony</a>
+                                       {%endif%}
+                                       {%if course.addedByLoggedUser == 'false'%}
+                                            <a class="btn btn-default" href="addToBasket/{{ course.id }}">Dodaj do koszyka</a>
+                                       {%endif%}
+                                </td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
             </div>
             <div class="col-md-2">
             </div>
@@ -51,5 +52,5 @@
 {% endblock %}
 
 {%block javascripts %}
-    <script src="{{asset("bundles/app/js/likes.js")}}"></script>
+    <script src="{{asset("bundles/app/js/showCourses.js")}}"></script>
 {%endblock%}
