--- a/fit4kids/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
+++ b/fit4kids/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
@@ -2,69 +2,69 @@
 {% extends "base.html.twig" %}
 
 {% block body %}
-    <div class="fos_user_user_show">
-        <h3 style="margin-bottom: 20px; margin-top:30px;">Informacje o użytkowniku: </h3>
-        <p>{{ 'profile.show.username'|trans }}: {{ user.username }}</p>
-        <p>{{ 'profile.show.email'|trans }}: {{ user.email }}</p>
-        <p>Stan punktów: {{ user.points }}</p>
-        <div style="margin-top: 10px">
-        </div>
-
-        <div style="margin-bottom: 30px;">
-        </div>
-
-        <div style="margin-bottom: 30px">
-            <ul class="nav nav-tabs">
-                <li class="active"><a data-toggle="tab" href="#home">Koszyk</a></li>
-                <li><a data-toggle="tab" href="#menu1">Zmień hasło</a></li>
-                <li><a data-toggle="tab" href="#menu2">Edytuj dane</a></li>
-                <li><a data-toggle="tab" href="#menu3">Dodaj punkty</a></li>
-                <li><a data-toggle="tab" href="#menu4">Twoje Kursy</a></li>
-            </ul>
-        </div>
-
-
-        <div class="tab-content" style="margin-top: 10px">
-            <div id="home" class="tab-pane fade in active" style="margin-top: 10px;">
-                {{ render(controller(
-                'AppBundle:Basket:show'
-                )) }}
+        <div class="fos_user_user_show" style="margin-left:30px; margin-right: 30px">
+            <h3 style="margin-bottom: 20px; margin-top:30px;">Informacje o użytkowniku: </h3>
+            <p>{{ 'profile.show.username'|trans }}: {{ user.username }}</p>
+            <p>{{ 'profile.show.email'|trans }}: {{ user.email }}</p>
+            <p>Stan punktów: {{ user.points }}</p>
+            <div style="margin-top: 10px">
             </div>
-            <div id="menu1" class="tab-pane fade">
-                {{ render(controller(
-                'FOSUserBundle:ChangePassword:changePassword'
-                )) }}
+
+            <div style="margin-bottom: 30px;">
             </div>
-            <div id="menu2" class="tab-pane fade">
-                {{ render(controller(
-                'FOSUserBundle:Profile:edit'
-                )) }}
+
+            <div style="margin-bottom: 30px">
+                <ul class="nav nav-tabs">
+                    <li class="active"><a data-toggle="tab" href="#home">Koszyk</a></li>
+                    <li><a data-toggle="tab" href="#menu1">Zmień hasło</a></li>
+                    <li><a data-toggle="tab" href="#menu2">Edytuj dane</a></li>
+                    <li><a data-toggle="tab" href="#menu3">Dodaj punkty</a></li>
+                    <li><a data-toggle="tab" href="#menu4">Twoje Kursy</a></li>
+                </ul>
             </div>
-            <div id="menu3" class="tab-pane fade">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-2">
-                        </div>
-                        <div class="col-md-8">
+
+
+            <div class="tab-content" style="margin-top: 10px">
+                <div id="home" class="tab-pane fade in active" style="margin-top: 10px;">
+                    {{ render(controller(
+                    'AppBundle:Basket:show'
+                    )) }}
+                </div>
+                <div id="menu1" class="tab-pane fade">
+                    {{ render(controller(
+                    'FOSUserBundle:ChangePassword:changePassword'
+                    )) }}
+                </div>
+                <div id="menu2" class="tab-pane fade">
+                    {{ render(controller(
+                    'FOSUserBundle:Profile:edit'
+                    )) }}
+                </div>
+                <div id="menu3" class="tab-pane fade">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-2">
+                            </div>
+                            <div class="col-md-8">
                             <span style="margin-right: 20px"><a href="/addPoints/10"
                                                                 class="btn btn-primary">Dodaj 10 punktów</a></span>
-                            <span style="margin-right: 20px"><a href="/addPoints/50"
-                                                                class="btn btn-primary">Dodaj 50 punktów</a></span>
-                            <span style="margin-right: 20px"><a href="/addPoints/100"
-                                                                class="btn btn-primary">Dodaj 100 punktów</a></span>
-                            <span style="margin-right: 20px"><a href="/addPoints/200"
-                                                                class="btn btn-primary">Dodaj 200 punktów</a></span>
-                        </div>
-                        <div class="col-md-2">
+                                <span style="margin-right: 20px"><a href="/addPoints/50"
+                                                                    class="btn btn-primary">Dodaj 50 punktów</a></span>
+                                <span style="margin-right: 20px"><a href="/addPoints/100"
+                                                                    class="btn btn-primary">Dodaj 100 punktów</a></span>
+                                <span style="margin-right: 20px"><a href="/addPoints/200"
+                                                                    class="btn btn-primary">Dodaj 200 punktów</a></span>
+                            </div>
+                            <div class="col-md-2">
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div id="menu4" class="tab-pane fade">
-                {{ render(controller(
-                'AppBundle:Course:myCourses'
-                )) }}
+                <div id="menu4" class="tab-pane fade">
+                    {{ render(controller(
+                    'AppBundle:Course:myCourses'
+                    )) }}
+                </div>
             </div>
         </div>
-    </div>
 {% endblock %}
