--- a/fit4kids/app/Resources/views/base.html.twig
+++ b/fit4kids/app/Resources/views/base.html.twig
@@ -29,6 +29,10 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                        <ul class="nav navbar-nav navbar-left">
+                            <li><br>{{ twitterButton({'locale':'pl', 'url':'http://twitter.pl' }) }}&nbsp</li>
+                            <li><br>{{ facebookButton({'locale':'pl', 'url':'http://facebook.pl' }) }}  </li>
+                        </ul>
                         <ul class="nav navbar-nav navbar-right">
                             {% if app.user %}
                             <li><a href="/course/">Kursy</a></li>
