fixed liked courses displaying in admin panel

--- a/fit4kids/src/AppBundle/Resources/views/Admin/show_admin_user.html.twig
+++ b/fit4kids/src/AppBundle/Resources/views/Admin/show_admin_user.html.twig
@@ -50,7 +50,7 @@
                 <td>
                     {%if user.likes is not null %}
                         {%for like in user.likes%}
-                            {{like.courseId}} <br>
+                             {{like.title}}<br>
                         {%endfor%}
                     {%endif%}
                 </td>
